# evidy-dbt-online-marketing

./: .gitignore  CLAUDE.md  README.md  dbt_project.yml  package-lock.yml  packages.yml  pyproject.toml
models/marts/: ads__campaigns.sql  ads__campaigns.yml  ads__events.sql  ads__events.yml  ads__items.sql  ads__items.yml  ads__sources.sql  ads__sources.yml
models/sources/glami/: _glami__models.yml  _glami__sources.yml  source_glami__categories.sql
models/sources/google_ads/: _google_ads__models.yml  _google_ads__sources.yml  source_google_ads__campaigns.sql
models/sources/google_analytics/: _google_analytics__models.yml  _google_analytics__sources.yaml  source_google_analytics__events.sql  source_google_analytics__items.sql  source_google_analytics__sources.sql
models/sources/meta_ads/: _meta_ads__models.yaml  _meta_ads__sources.yaml  _meta_ads__sources.yml  source_meta_ads__campaigns.sql  source_meta_ads__events.sql
models/sources/meta_ads/base/: base_meta_ads__campaigns__action_values.sql  base_meta_ads__campaigns__actions.sql
models/sources/seznam_sklik/: _seznam_sklik__models.yml  _seznam_sklik__sources.yaml  _seznam_sklik__sources.yml  source_seznam_sklik__campaigns.sql
models/sources/util/: _util__models.yml  _util__sources.yml  source_exchange__rates.sql
