[project]
name = "evidy-dbt-online-ads"
version = "1.0.0"
description = "dbt project for transforming online marketing data from various platforms into analytics-ready data marts."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery>=1.11.0",
    "dbt-core>=1.11.3",
    "dbt-duckdb>=1.10.0",
]
